See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0b1
-------------------

12/2/14
    - Added new option 'out.suppress_detail' to quickly suppress all
      pretty-printed output except the system summary. By default,
      detailed output is automatically suppressed for systems larger
      than 500 buses.

11/18/14
    - Updated case300.m with new conversion from original CDF file.
      No longer uses 9900 MVA as proxy for unlimited line capacity.

11/13/14
    - Added capability for set_reorder() to automatically pad matrix
      or cell array before assignment of matrix or cell array with
      larger size in some dimensions. Added tests to t_ext2int2ext().

11/12/14
    - Loads at isolated buses are no longer included in results from
      total_load().
    - Fixed loads and shunts at isolated buses are no longer included
      in system and area summaries in printpf(). Line charging
      injections set to zero for DC power flow results.
    - Added tests for printpf() in t_printpf.m.
    - Changes to the internally indexed version of gencost now
      get properly copied back to externally indexed version by
      int2ext().
    - Added tests in t_ext2int2ext() to confirm that e2i_data/field()
      and i2e_data/field() work for cell array as well as numerical
      array fields. Updated help text to reflect this feature.

11/11/14
    - Added get_losses() function to compute losses, line charging
      reactive injections and their derivatives, as functions of
      bus voltages. Corresponding tests included in t_get_losses(),
      including example of loss sensitivity factors.
    - Fixed bug in runpf.m that caused a crash for cases with
      pf.enforce_q_lims turned on and exactly two Q limit violations,
      one Qmax and one Qmin. Thanks to Jose Luis Marin.

11/4/14
    - Modified behavior so setting out.all option to 0 is now ignored
      for pretty-printed output to files specified as FNAME argument